# lris2-drp

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test-main.yaml
config/: config.yaml
lris2_drp/: flows.py  qa.py
src/: main.py
src/core/: flat.py  flows.py  qa.py  tracing.py
src/keck_primitives/: normalize_flat.py  trace_slits.py  utils.py
src/workflows/flows/: batch_flat_flow.py
src/workflows/prefect_tasks/: create_correction.py  load_flat.py  normalize_flat.py  qa_plot.py  save_corrected.py  save_trace.py  trace_slits.py
