[build-system]
# Specifies the build system to use. 
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lris2-drp" 
version = "0.1.0" 
dependencies = [
  "prefect",
  "astropy",
  "numpy",
  "matplotlib",
  "scipy",
  "keckdrpframework"
]
requires-python = ">=3.9"
authors = [
  { name = "Michael Langmayr", email = "langmayr@caltech.edu" }
]
maintainers = [
  { name = "Michael Langmayr", email = "langmayr@caltech.edu" }
]
description = "Data Reduction Pipeline for LRIS2"
readme = "README.md" 
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
# Various URLs related to your project. These links are displayed on PyPI.
#Homepage = "https://example.com" 
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/CaltechOpticalObservatories/lris2-drp"
"Bug Tracker" = "https://github.com/CaltechOpticalObservatories/lris2-drp/issues" 
#Changelog = "https://github.com/yourusername/your-repo/blob/master/CHANGELOG.md"


[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8"
]

[tool.setuptools]
packages = { find = { include = ["src"] } }
